@@ -366,7 +366,7 @@
                     <testFailureIgnore>true</testFailureIgnore>
                     <forkCount>3</forkCount>
                     <reuseForks>true</reuseForks>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <argLine>-Xmx1024M ${argLine}</argLine>
                 </configuration>
             </plugin>
             <plugin>
